Update and rename replicape.ini to replicape_gantry.ini
Just copied Y-axis and renamed to [Axis-4] to reflect .hal

--- a/configs/ARM/BeagleBone/Replicape/replicape_gantry.ini
+++ b/configs/ARM/BeagleBone/Replicape/replicape_gantry.ini
@@ -107,8 +107,8 @@ POSTGUI_HALFILE =       3D.postgui.hal
 
 [TRAJ]
 
-AXES =                  4
-COORDINATES =           X Y Z A
+AXES =                  5
+COORDINATES =           X Y Z A 
 DEFAULT_VELOCITY =      20
 MAX_VELOCITY =          2000
 LINEAR_UNITS =          mm
@@ -284,6 +284,44 @@ DIRSETUP   =              200
 DIRHOLD    =              200
 STEPLEN    =              1000
 STEPSPACE  =              1000
+
+[AXIS_4]
+
+TYPE =               LINEAR
+MAX_VELOCITY =       400.0
+MAX_ACCELERATION =   250.0
+# Set Stepgen max 20% higher than the axis
+STEPGEN_MAX_VEL =    480.0
+STEPGEN_MAX_ACC =    300.0
+
+BACKLASH =           0.000
+
+SCALE =  91.428571
+
+MIN_LIMIT =             0
+MAX_LIMIT =             214
+
+FERROR =     1.0
+MIN_FERROR = 0.1
+
+HOME =                  212
+HOME_OFFSET =           215.00
+HOME_IGNORE_LIMITS =    YES
+HOME_USE_INDEX =        NO
+HOME_SEQUENCE =         1
+
+# Set to zero if you don't have physical home/limit switches
+# Set to the desired homing and latch velocity if you have switches
+# See: https://github.com/machinekit/machinekit-docs
+HOME_SEARCH_VEL =       25.0
+HOME_LATCH_VEL =        5.0
+
+# these are in nanoseconds
+DIRSETUP   =              200
+DIRHOLD    =              200
+STEPLEN    =              1000
+STEPSPACE  =              1000
+
 
 
 [EMCIO]
