--- a/configs/ARM/BeagleBone/Replicape/replicape.ini
+++ b/configs/ARM/BeagleBone/Replicape/replicape.ini
@@ -75,6 +75,13 @@ CYCLE_TIME =            0.010
 # File containing interpreter variables
 PARAMETER_FILE =        pru-stepper.var
 
+# subroutine path for the custom FDM printing .ngc files used for remapping
+# use directory in config path until more suitable location. this w.r.t the
+# fact that not every machine will have an extruder and/or fan
+#SUBROUTINE_PATH = /usr/share/linuxcnc/ncfiles/remap-subroutines/fdm
+SUBROUTINE_PATH = subroutines
+
+
 [EMCMOT]
 EMCMOT =                motmod
 
